# cabal-parsers

./: .gitignore  LICENSE  Main.hs  Main2.hs  cabal-parsers.cabal  cabal.project
src-118/: Paths_Cabal.hs
src-118/Cabal/Parser/: V118.hs
src-120/: Paths_Cabal.hs
src-120/Cabal/Parser/: V120.hs
src-122/: Paths_Cabal.hs
src-122/Cabal/Parser/: V122.hs
src-124/: Paths_Cabal.hs
src-124/Cabal/Parser/: V124.hs
src-200/: Paths_Cabal.hs
src-200/Cabal/Parser/: V200.hs
src-202/Cabal/Parser/: V202.hs
src-204/: Paths_Cabal.hs
src-204/Cabal/Parser/: V204.hs
src-220/: Paths_Cabal.hs
src-220/Cabal/Parser/: V220.hs
src-300/: Paths_Cabal.hs
src-300/Cabal/Parser/: V300.hs
src/Cabal/: Parser.hs
