cabal-version:       2.2
name:                cabal-parsers
version:             0

synopsis:            WIP / proof of concept
license:             BSD-3-Clause
license-file:        LICENSE
maintainer:          hvr@gnu.org
category:            Development

-- common block for vendored internal lib:Cabal sub-libs
common cabal-vXXX
  ghc-options:         -Wall -fno-ignore-asserts

  other-modules:
    -- fake
    Paths_Cabal

  build-depends:
    , array        ^>= 0.5.2
    , base         ^>= 4.10.0
    , binary       ^>= 0.8.5
    , bytestring   ^>= 0.10.8
    , containers   ^>= 0.5.10
    , deepseq      ^>= 1.4.3
    , directory    ^>= 1.3.0
    , filepath     ^>= 1.4.1
    , pretty       ^>= 1.1.3
    , process      ^>= 1.6.1
    , time         ^>= 1.8
    , unix         ^>= 2.7.2

library cabal-v200
  import: cabal-vXXX

  hs-source-dirs:      vendored/Cabal-2.0/
  hs-source-dirs:      src-200/

  default-language:    Haskell2010

  exposed-modules:
    Cabal.Parser.V200

  other-modules:
    -- these are our main entry points we care about
    Distribution.PackageDescription.Check
    Distribution.PackageDescription.Parse
    Distribution.PackageDescription.PrettyPrint

    -- these are transitive imports...
    Distribution.Backpack
    Distribution.Compat.Binary
    Distribution.Compat.CopyFile
    Distribution.Compat.Environment
    Distribution.Compat.Exception
    Distribution.Compat.Graph
    Distribution.Compat.Internal.TempFile
    Distribution.Compat.Map.Strict
    Distribution.Compat.MonadFail
    Distribution.Compat.Prelude
    Distribution.Compat.ReadP
    Distribution.Compat.Semigroup
    Distribution.Compat.Stack
    Distribution.Compiler
    Distribution.GetOpt
    Distribution.InstalledPackageInfo
    Distribution.License
    Distribution.ModuleName
    Distribution.Package
    Distribution.PackageDescription
    Distribution.PackageDescription.Configuration
    Distribution.PackageDescription.Utils
    Distribution.ParseUtils
    Distribution.PrettyUtils
    Distribution.ReadE
    Distribution.Simple.BuildPaths
    Distribution.Simple.BuildToolDepends
    Distribution.Simple.CCompiler
    Distribution.Simple.Command
    Distribution.Simple.Compiler
    Distribution.Simple.InstallDirs
    Distribution.Simple.LocalBuildInfo
    Distribution.Simple.PackageIndex
    Distribution.Simple.Program
    Distribution.Simple.Program.Builtin
    Distribution.Simple.Program.Db
    Distribution.Simple.Program.Find
    Distribution.Simple.Program.Internal
    Distribution.Simple.Program.Run
    Distribution.Simple.Program.Types
    Distribution.Simple.Setup
    Distribution.Simple.Utils
    Distribution.System
    Distribution.Text
    Distribution.Types.AbiHash
    Distribution.Types.Benchmark
    Distribution.Types.BenchmarkInterface
    Distribution.Types.BenchmarkType
    Distribution.Types.BuildInfo
    Distribution.Types.BuildType
    Distribution.Types.Component
    Distribution.Types.ComponentId
    Distribution.Types.ComponentLocalBuildInfo
    Distribution.Types.ComponentName
    Distribution.Types.ComponentRequestedSpec
    Distribution.Types.CondTree
    Distribution.Types.Condition
    Distribution.Types.Dependency
    Distribution.Types.DependencyMap
    Distribution.Types.ExeDependency
    Distribution.Types.Executable
    Distribution.Types.ExecutableScope
    Distribution.Types.ForeignLib
    Distribution.Types.ForeignLibOption
    Distribution.Types.ForeignLibType
    Distribution.Types.GenericPackageDescription
    Distribution.Types.HookedBuildInfo
    Distribution.Types.IncludeRenaming
    Distribution.Types.LegacyExeDependency
    Distribution.Types.Library
    Distribution.Types.LocalBuildInfo
    Distribution.Types.Mixin
    Distribution.Types.Module
    Distribution.Types.ModuleReexport
    Distribution.Types.ModuleRenaming
    Distribution.Types.MungedPackageId
    Distribution.Types.MungedPackageName
    Distribution.Types.PackageDescription
    Distribution.Types.PackageId
    Distribution.Types.PackageName
    Distribution.Types.PkgconfigDependency
    Distribution.Types.PkgconfigName
    Distribution.Types.SetupBuildInfo
    Distribution.Types.SourceRepo
    Distribution.Types.TargetInfo
    Distribution.Types.TestSuite
    Distribution.Types.TestSuiteInterface
    Distribution.Types.TestType
    Distribution.Types.UnitId
    Distribution.Types.UnqualComponentName
    Distribution.Utils.Base62
    Distribution.Utils.Generic
    Distribution.Utils.NubList
    Distribution.Utils.ShortText
    Distribution.Utils.String
    Distribution.Verbosity
    Distribution.Version
    Language.Haskell.Extension

library cabal-v124
  import: cabal-vXXX

  hs-source-dirs:      vendored/Cabal-1.24/
  hs-source-dirs:      src-124/

  default-language:    Haskell98

  exposed-modules:
    Cabal.Parser.V124

  other-modules:
    -- fake
    Paths_Cabal

  other-modules:
    -- these are our main entry points we care about
    Distribution.PackageDescription.Check
    Distribution.PackageDescription.Parse
    Distribution.PackageDescription.PrettyPrint

    -- these are transitive imports...
    Distribution.Compat.Binary
    Distribution.Compat.CopyFile
    Distribution.Compat.Exception
    Distribution.Compat.Internal.TempFile
    Distribution.Compat.MonadFail
    Distribution.Compat.ReadP
    Distribution.Compat.Semigroup
    Distribution.Compiler
    Distribution.InstalledPackageInfo
    Distribution.License
    Distribution.ModuleName
    Distribution.Package
    Distribution.PackageDescription
    Distribution.PackageDescription.Configuration
    Distribution.PackageDescription.Utils
    Distribution.ParseUtils
    Distribution.ReadE
    Distribution.Simple.CCompiler
    Distribution.Simple.Utils
    Distribution.System
    Distribution.Text
    Distribution.Verbosity
    Distribution.Version
    Language.Haskell.Extension

library cabal-v122
  import: cabal-vXXX

  hs-source-dirs:      vendored/Cabal-1.22/
  hs-source-dirs:      src-122/

  default-language:    Haskell98
  default-extensions:  CPP

  exposed-modules:
    Cabal.Parser.V122

  other-modules:
    -- these are our main entry points we care about
    Distribution.PackageDescription.Check
    Distribution.PackageDescription.Parse
    Distribution.PackageDescription.PrettyPrint

    -- these are transitive imports...
    Distribution.Compat.Binary
    Distribution.Compat.CopyFile
    Distribution.Compat.Exception
    Distribution.Compat.ReadP
    Distribution.Compat.TempFile
    Distribution.Compiler
    Distribution.License
    Distribution.InstalledPackageInfo
    Distribution.ModuleName
    Distribution.Package
    Distribution.PackageDescription
    Distribution.PackageDescription.Configuration
    Distribution.PackageDescription.Utils
    Distribution.ParseUtils
    Distribution.ReadE
    Distribution.Simple.CCompiler
    Distribution.Simple.Compiler
    Distribution.Simple.Utils
    Distribution.System
    Distribution.Text
    Distribution.Verbosity
    Distribution.Version
    Language.Haskell.Extension

library cabal-v120
  import: cabal-vXXX

  hs-source-dirs:      vendored/Cabal-1.20/
  hs-source-dirs:      src-120/

  default-language:    Haskell98
  default-extensions:  CPP

  exposed-modules:
    Cabal.Parser.V120

  other-modules:
    -- these are our main entry points we care about
    Distribution.PackageDescription.Check
    Distribution.PackageDescription.Parse
    Distribution.PackageDescription.PrettyPrint

    -- these are transitive imports...
    Distribution.Compat.CopyFile
    Distribution.Compat.Exception
    Distribution.Compat.ReadP
    Distribution.Compat.TempFile
    Distribution.Compiler
    Distribution.InstalledPackageInfo
    Distribution.License
    Distribution.ModuleName
    Distribution.Package
    Distribution.PackageDescription
    Distribution.PackageDescription.Configuration
    Distribution.PackageDescription.Utils
    Distribution.ParseUtils
    Distribution.ReadE
    Distribution.Simple.CCompiler
    Distribution.Simple.Utils
    Distribution.System
    Distribution.Text
    Distribution.Verbosity
    Distribution.Version
    Language.Haskell.Extension

----------------------------------------------------------------------------

-- non-vendored component defaults
common nv-defaults
  default-language:    Haskell2010
  ghc-options:        -Wall

  build-depends:
    -- inherited dependencies
    , base
    , bytestring
    , directory
    , filepath
    -- extra deps
    , Cabal ^>= 2.2
    , text  ^>= 1.2.3

library
  import: nv-defaults

  hs-source-dirs:      src

  exposed-modules:
      Cabal.Parser

  reexported-modules:
    , Cabal.Parser.V120
    , Cabal.Parser.V122
    , Cabal.Parser.V124
    , Cabal.Parser.V200

  build-depends:
    , cabal-v120
    , cabal-v122
    , cabal-v124
    , cabal-v200

executable test-parse
  import: nv-defaults

  main-is: Main.hs
  build-depends: cabal-parsers

executable test-parse2
  import: nv-defaults

  main-is: Main2.hs
  build-depends: cabal-parsers

  -- extra dependencies
  build-depends:
    , tar        ^>= 0.5.0
    , zlib       ^>= 0.6.1
